added fonts from student and styles

--- a/iris/src/main/webapp/IrisStyles/iris.css
+++ b/iris/src/main/webapp/IrisStyles/iris.css
@@ -16,3 +16,7 @@ div#contents .layout_wai {
     position: absolute;
     margin-top: -23px;
 }
+
+.yui-skin-sam .yui-dialog .ft span.default button {
+    color: black;
+}
