--- a/iris/src/main/webapp/IrisStyles/Universal/shell.css
+++ b/iris/src/main/webapp/IrisStyles/Universal/shell.css
@@ -325,7 +325,7 @@ div.pageWrapper div.thePassage.hiding.contentEmpty {
     -webkit-transition: background-color .2s ease-in;
  	-ms-transition: background-color .2s ease-in;
     transition: background-color .2s ease-in;
-    background: #fff url(../../Images/universal/universal_shell.png) no-repeat center -7px;
+    background: #fff url(../../../Shared/Images/universal/universal_shell.png) no-repeat center -7px;
     padding: 0px;
 }
 #jumpGo:active,
@@ -693,7 +693,7 @@ ul#studentTools {
 }
 .alertBar .alertDismiss {
 	display: block;
-	background: transparent url(../../Images/universal/universal_shell.png) no-repeat center -3233px;
+	background: transparent url(../../../Shared/Images//universal/universal_shell.png) no-repeat center -3233px;
 	height: 30px;
 	width: 30px;
 	overflow: hidden;
@@ -900,17 +900,17 @@ ul#studentTools {
 	display:none;
 }
 .yui-panel td.incorrect {
-	background-image: url(../../Images/RedX.png);
+	background-image: url(../../../Shared/Images//RedX.png);
 	background-repeat: no-repeat;
 	background-position: center center;
 }
 .yui-panel td.correct {
-	background-image: url(../../Images/GreenCheck.png);
+	background-image: url(../../../Shared/Images//GreenCheck.png);
 	background-repeat: no-repeat;
 	background-position: center center;
 }
 .yui-panel td.na {
-	background-image: url(../../Images/YellowDash.png);
+	background-image: url(../../../Shared/Images//YellowDash.png);
 	background-repeat: no-repeat;
 	background-position: center center;
 }
@@ -923,7 +923,7 @@ ul#studentTools {
 }
 #yuiSimpleDialog_mask {
 	z-index: 2000 !important;
-	background: url(../../Images/universal/mask_zigzag.png) repeat;
+	background: url(../../../Shared/Images//universal/mask_zigzag.png) repeat;
 	opacity: 1;
 }
 
@@ -1017,7 +1017,7 @@ ul#studentTools {
     line-height: 25px;
     margin-top: -25px;
     text-decoration: none;
-	background: url(../../Images/modern/sprites_mobile_0.png) center -2730px no-repeat;
+	background: url(../../../Shared/Images//modern/sprites_mobile_0.png) center -2730px no-repeat;
 }
 #dialogContentHeader a:hover {
 	background-position: center -2831px;
@@ -1410,7 +1410,7 @@ a.yui-panel-bottom:active
 	width: 38px;
 	min-width: inherit;
 	text-decoration: none;
-	background: url(../../Images/universal/soundCue.png) no-repeat center 10px;
+	background: url(../../../Shared/Images//universal/soundCue.png) no-repeat center 10px;
 	background-color: rgba(243,243,243,0.3);
 	border-left: solid 1px #e6e6e6;
 	border-right: solid 1px #e6e6e6;
@@ -1433,7 +1433,7 @@ a.yui-panel-bottom:active
 }
 #soundCues .audioControls.audio-layout-single.playing_start,
 #soundCues .audioControls.audio-layout-single.playing_start a:active {
-	background: url(../../Images/universal/animatedSpeaker.gif) no-repeat center 8px !important;
+	background: url(../../../Shared/Images//universal/animatedSpeaker.gif) no-repeat center 8px !important;
 }
 #soundCues .audioControls.audio-layout-single.load_fail a,
 #soundCues .audioControls.audio-layout-single.decode_fail a,
@@ -1451,7 +1451,7 @@ a.yui-panel-bottom:active
 #soundCues .audioControls.audio-layout-single.load_complete a:active,
 #soundCues .audioControls.audio-layout-single.decode_start a:active {
 	cursor: default;
-	background: url(../../Images/controls/loader15.gif) no-repeat center 15px !important;
+	background: url(../../../Shared/Images//controls/loader15.gif) no-repeat center 15px !important;
 }
 /* @end */
 
@@ -1465,7 +1465,7 @@ a.yui-panel-bottom:active
 	width: 18px;
 	height: 18px;
 	text-indent: -9999px;
-	background: url(../../Images/controls/audio2013.png) no-repeat;
+	background: url(../../../Shared/Images//controls/audio2013.png) no-repeat;
 	margin-left: 2px;
 }
 .startSpeak {
@@ -1656,7 +1656,7 @@ a.yui-panel-bottom:active
 .review .pages a:hover, .review .pages a:focus {
 	color: #336699;
 	text-decoration: underline;
-	background: url(../../Images/lightGrey.png) repeat;
+	background: url(../../../Shared/Images//lightGrey.png) repeat;
 }
 .review .pages a:visited {
 	color: #666;
@@ -1666,7 +1666,7 @@ a.yui-panel-bottom:active
 	border-color: #336699;
 }
 .pages a.marked {
-	background: url(../../Images/controls/review.gif) no-repeat 100% 3px;
+	background: url(../../../Shared/Images//controls/review.gif) no-repeat 100% 3px;
 	border-color: #3b90fc;
 	border-width: 3px;
 }
@@ -1683,7 +1683,7 @@ a.yui-panel-bottom:active
 	background-position: 100% 35px;
 }
 .pages a.marked:hover {
-	background: url(../../Images/controls/review.gif) no-repeat 100% -67px;
+	background: url(../../../Shared/Images//controls/review.gif) no-repeat 100% -67px;
 	border-color: #148a0c;
 }
 .TDS_PS_L1 .pages a.marked:hover {
@@ -1704,7 +1704,7 @@ a.yui-panel-bottom:active
 
 .markedWarning,
 .unansweredWarning {
-	background: rgba(0, 0, 0, 0) url("../../Images/Universal/marked.png") no-repeat scroll 0 center;
+	background: rgba(0, 0, 0, 0) url("../../../Shared/Images//Universal/marked.png") no-repeat scroll 0 center;
     border: 1px solid #ccc;
     font-size: 1.3em;
     margin-bottom: 1em;
@@ -1715,11 +1715,11 @@ a.yui-panel-bottom:active
 	margin-top: 1em;
 }
 .unansweredWarning {
-	background-image: url(../../Images/Universal/unanswered.png);
+	background-image: url(../../../Shared/Images//Universal/unanswered.png);
 }
 
 .review .pages a.marked {
-	background: url(../../Images/Universal/marked.png) no-repeat right center;
+	background: url(../../../Shared/Images//Universal/marked.png) no-repeat right center;
 	-moz-box-shadow: 0 0 5px 2px rgba(0,174,239,.1);
    	-webkit-box-shadow: 0 0 5px 2px rgba(0,174,239,.1);
 	box-shadow: 0 0 5px 2px rgba(0,174,239,.4);
@@ -1737,10 +1737,10 @@ a.yui-panel-bottom:active
 	border-color: #fff;
 }
 .review .pages a.unanswered {
-	background: url(../../Images/Universal/unanswered.png) no-repeat right center;
+	background: url(../../../Shared/Images//Universal/unanswered.png) no-repeat right center;
 }
 .review .pages a.marked.unanswered {
-	background-image: url(../../Images/Universal/marked_unanswered.png);
+	background-image: url(../../../Shared/Images//Universal/marked_unanswered.png);
 }
 
 /* @end */
@@ -1749,7 +1749,7 @@ a.yui-panel-bottom:active
 /* @group Review New List View */
 .TDS_RSL_ListView .markedWarning,
 .TDS_RSL_ListView .unansweredWarning {
-	background: url(../../Images/Universal/marked.svg) no-repeat 1em center;
+	background: url(../../../Shared/Images//Universal/marked.svg) no-repeat 1em center;
 	border: solid 1px #666;
 	font-size: 1.3em;
 	padding-left: 4em;
@@ -1764,7 +1764,7 @@ a.yui-panel-bottom:active
 	margin-top: 1em;
 }
 .TDS_RSL_ListView .unansweredWarning {
-	background-image: url(../../Images/Universal/unanswered.svg);
+	background-image: url(../../../Shared/Images//Universal/unanswered.svg);
 }
 
 .TDS_CCYellowB.TDS_RSL_ListView .markedWarning,
@@ -1886,7 +1886,7 @@ a.yui-panel-bottom:active
     column-count: 6;
 }
 .TDS_RSL_ListView .review .pages a.marked {
-	background: url(../../Images/Universal/marked.svg) no-repeat right center;
+	background: url(../../../Shared/Images//Universal/marked.svg) no-repeat right center;
 	-moz-box-shadow: 0 0 5px 2px rgba(0,174,239,.1);
    	-webkit-box-shadow: 0 0 5px 2px rgba(0,174,239,.1);
 	box-shadow: 0 0 5px 2px rgba(0,174,239,.4);
@@ -1901,11 +1901,11 @@ a.yui-panel-bottom:active
 	background-color: #00aeef;
 }
 .TDS_RSL_ListView .review .pages a.unanswered {
-	background: url(../../Images/Universal/unanswered.svg) no-repeat right center;
+	background: url(../../../Shared/Images//Universal/unanswered.svg) no-repeat right center;
 	background-size: 1.5em;
 }
 .TDS_RSL_ListView .review .pages a.marked.unanswered {
-	background-image: url(../../Images/Universal/marked_unanswered.svg);
+	background-image: url(../../../Shared/Images//Universal/marked_unanswered.svg);
 	background-size: 1.5em;
 }
 .TDS_RSL_ListView.TDS_PS_L2 .review .pages,
@@ -1919,7 +1919,7 @@ a.yui-panel-bottom:active
 .TDS_CCYellowB.TDS_RSL_ListView .markedWarning,
 .TDS_CCInvert.TDS_RSL_ListView .markedWarning,
 .TDS_CCWhiteN.TDS_RSL_ListView .markedWarning{
-	background-image: url(../../Images/Universal/marked_white.svg);
+	background-image: url(../../../Shared/Images//Universal/marked_white.svg);
 	background-size: 1.5em;
 }
 .TDS_CCYellowB.TDS_RSL_ListView .review .pages a.unanswered,
@@ -1928,13 +1928,13 @@ a.yui-panel-bottom:active
 .TDS_CCYellowB.TDS_RSL_ListView .unansweredWarning,
 .TDS_CCInvert.TDS_RSL_ListView .unansweredWarning,
 .TDS_CCWhiteN.TDS_RSL_ListView .unansweredWarning{
-	background-image: url(../../Images/Universal/unanswered_white.svg);
+	background-image: url(../../../Shared/Images//Universal/unanswered_white.svg);
 	background-size: 1.5em;
 }
 .TDS_CCYellowB.TDS_RSL_ListView .review .pages a.marked.unanswered,
 .TDS_CCInvert.TDS_RSL_ListView .review .pages a.marked.unanswered,
 .TDS_CCWhiteN.TDS_RSL_ListView .review .pages a.marked.unanswered {
-	background-image: url(../../Images/Universal/marked_unanswered_white.svg);
+	background-image: url(../../../Shared/Images//Universal/marked_unanswered_white.svg);
 	background-size: 1.5em;
 }
 .TDS_CCYellowB.TDS_RSL_ListView .review .pages a.marked:hover,
@@ -2066,7 +2066,7 @@ a.yui-panel-bottom:active
 	display: inline;
 }
 .app_ResponseEntry .topBar {
-	background-image: url(../../Images/logo_delaware_alt_small.gif);
+	background-image: url(../../../Shared/Images//logo_delaware_alt_small.gif);
 	padding-right:375px;
 }
 .app_ResponseEntry .ForScoreEntry {
@@ -3045,7 +3045,7 @@ a.yui-panel-bottom:active
 		border: solid 1px #ccc;
 		-webkit-border-radius: 5px;
 		border-radius: 5px;
-		background: #fff url(../../Images/modern/rotate_please.png) no-repeat center bottom;
+		background: #fff url(../../../Shared/Images//modern/rotate_please.png) no-repeat center bottom;
 	}
 	.orientationMessage h3 {
 		border-bottom:solid 1px #ccc;
