updated version and remvoed playback fail button

--- a/iris/src/main/webapp/IrisStyles/iris.css
+++ b/iris/src/main/webapp/IrisStyles/iris.css
@@ -20,3 +20,6 @@ div#contents .layout_wai {
 .yui-skin-sam .yui-dialog .ft span.default button {
     color: black;
 }
+.playing_fail{
+    display: none;
+}
